--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -5,6 +5,8 @@ repositories {
     flatDir {
         dirs rootProject.file('libs')
     }
+    // FTCDASH
+    maven { url = 'https://maven.brott.dev/' }
 }
 
 dependencies {
@@ -19,5 +21,8 @@ dependencies {
     implementation 'org.tensorflow:tensorflow-lite-task-vision:0.2.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'org.firstinspires.ftc:gameAssets-FreightFrenzy:1.0.0'
+    // FTCDASH
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.3'
+    implementation 'com.github.NoahBres:jotai:1.0.3'
 }
 
